CICD/IntroKubernetes-edX/exer/rsvp-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsvp-db
spec: 
  replicas: 1
  template:
    metadata:
    labels:
      appdb: rsvpdb
    spec: 
    containers:
    - name: rsvpd-db
      image: mongo:3.3
      ports:
      - containerPort: 27017
